update version to 1.1.1-BETA, refactor command handling to BukkitCommandHandler, and improve error logging